syntax = 'proto3';

package example;

option java_multiple_files = true;
option java_package = "com.ssinchenko.example.proto";

message CallDFObjectCreateDataFrame {
  string stringPath = 1;
}